crates/nash-codegen/src/optimizer_tests/snapshots/nash_codegen__optimizer_tests__inverse__representation_list_escaping.snap
---
source: crates/nash-codegen/src/optimizer_tests/inverse.rs
expression: "crate::harness::pass_snapshot(b.arena, before,\nformat!(\"--- core before\\n{}\\n--- uplc before\\n{}\\n--- core after\\n{}\\n--- uplc after\\n{}\\n--- result\\n{}\\n--- logs\\n{:?}\",\npretty(before), left.uplc, pretty(after), right.uplc, right.result,\nright.logs))"
---
--- unoptimized Core
let x#9 : list Data = trace "once" in (con (list data) [(I 7)]) in
let encoded#10 : Data = listData x#9 in
let alias#11 : Data = encoded#10 in
constr 0 encoded#10 (unListData alias#11) (unListData alias#11)
--- unoptimized UPLC
(program 1.1.0
  [(lam x_9
    [(lam encoded_10
      [(lam alias_11
        (constr 0
          encoded_10
          [(builtin unListData) alias_11]
          [(builtin unListData) alias_11]))
        encoded_10])
      [(builtin listData) x_9]])
    (force
      [[(force (builtin trace)) (con string "once")]
        (delay (con (list data) [(I 7)]))])])
--- optimized Core
let x#1 : list Data = trace "once" in (con (list data) [(I 7)]) in
let encoded#2 : Data = listData x#1 in
constr 0 encoded#2 x#1 x#1
--- optimized UPLC
(program 1.1.0
  [(lam builtin_5
    [(lam x_3
      [(lam encoded_4 (constr 0 encoded_4 x_3 x_3)) [(builtin listData) x_3]])
      (force [[builtin_5 (con string "once")] (delay (con (list data) [(I 7)]))])])
    (force (builtin trace))])
--- isolated pass
--- core before
let x#9 : list Data = trace "once" in (con (list data) [(I 7)]) in
let encoded#10 : Data = listData x#9 in
let alias#11 : Data = encoded#10 in
constr 0 encoded#10 (unListData alias#11) (unListData alias#11)
--- uplc before
(program 1.1.0
  [(lam x_9
    [(lam encoded_10
      [(lam alias_11
        (constr 0
          encoded_10
          [(builtin unListData) alias_11]
          [(builtin unListData) alias_11]))
        encoded_10])
      [(builtin listData) x_9]])
    (force
      [[(force (builtin trace)) (con string "once")]
        (delay (con (list data) [(I 7)]))])])
--- core after
let x#9 : list Data = trace "once" in (con (list data) [(I 7)]) in
let encoded#10 : Data = listData x#9 in
let alias#11 : Data = encoded#10 in
constr 0 encoded#10 x#9 x#9
--- uplc after
(program 1.1.0
  [(lam x_9
    [(lam encoded_10 [(lam alias_11 (constr 0 encoded_10 x_9 x_9)) encoded_10])
      [(builtin listData) x_9]])
    (force
      [[(force (builtin trace)) (con string "once")]
        (delay (con (list data) [(I 7)]))])])
--- result
(constr 0
  (con data (List [I 7]))
  (con (list data) [(I 7)])
  (con (list data) [(I 7)]))
--- logs
["once"]
