crates/nash-codegen/src/optimizer_tests/snapshots/nash_codegen__optimizer_tests__inverse__representation_list_oversaturated.snap
---
source: crates/nash-codegen/src/optimizer_tests/inverse.rs
expression: "format!(\"{}\\n--- isolated pass\\n{}\", fixture.code_snapshot(),\nformat!(\"--- core before\\n{}\\n--- uplc before\\n{}\\n--- core after\\n{}\\n--- uplc after\\n{}\\n--- result\\n{}\\n--- logs\\n{:?}\",\npretty(before), left.uplc, pretty(after), right.uplc, right.result,\nright.logs))"
---
--- unoptimized Core
unListData (listData (con (list data) [(I 7)])) 1
--- unoptimized UPLC
(program 1.1.0
  [[(builtin unListData) [(builtin listData) (con (list data) [(I 7)])]]
    (con integer 1)])
--- optimized Core
let anf#1 : Data = listData (con (list data) [(I 7)]) in
let anf#2 : list Data = unListData anf#1 in
anf#2 1
--- optimized UPLC
(program 1.1.0
  [(lam anf_3 [(lam anf_4 [anf_4 (con integer 1)]) [(builtin unListData) anf_3]])
    [(builtin listData) (con (list data) [(I 7)])]])
--- isolated pass
--- core before
unListData (listData (con (list data) [(I 7)])) 1
--- uplc before
(program 1.1.0
  [[(builtin unListData) [(builtin listData) (con (list data) [(I 7)])]]
    (con integer 1)])
--- core after
(con (list data) [(I 7)]) 1
--- uplc after
(program 1.1.0 [(con (list data) [(I 7)]) (con integer 1)])
--- result
error: NonFunctionApplication(Con(Integer(1)), Con(ProtoList(Data, [Data(Integer(7))])))
--- logs
[]
