crates/nash-codegen/src/optimizer_tests/snapshots/nash_codegen__optimizer_tests__inverse__representation_list_reverse.snap
---
source: crates/nash-codegen/src/optimizer_tests/inverse.rs
expression: "crate::harness::pass_snapshot(b.arena, before,\nformat!(\"--- core before\\n{}\\n--- uplc before\\n{}\\n--- core after\\n{}\\n--- uplc after\\n{}\\n--- result\\n{}\\n--- logs\\n{:?}\",\npretty(before), left.uplc, pretty(after), right.uplc, right.result,\nright.logs))"
---
--- unoptimized Core
listData (unListData (con data (List [I 7])))
--- unoptimized UPLC
(program 1.1.0
  [(builtin listData) [(builtin unListData) (con data (List [I 7]))]])
--- optimized Core
(con data (List [I 7]))
--- optimized UPLC
(program 1.1.0 (con data (List [I 7])))
--- isolated pass
--- core before
listData (unListData (con data (List [I 7])))
--- uplc before
(program 1.1.0
  [(builtin listData) [(builtin unListData) (con data (List [I 7]))]])
--- core after
(con data (List [I 7]))
--- uplc after
(program 1.1.0 (con data (List [I 7])))
--- result
(con data (List [I 7]))
--- logs
[]
