crates/nash-codegen/src/optimizer_tests/snapshots/nash_codegen__optimizer_tests__inverse__representation_list_reverse_bound_invalid.snap
---
source: crates/nash-codegen/src/optimizer_tests/inverse.rs
expression: "crate::harness::pass_snapshot(b.arena, before,\nformat!(\"--- core before\\n{}\\n--- uplc before\\n{}\\n--- core after\\n{}\\n--- uplc after\\n{}\\n--- result\\n{}\\n--- logs\\n{:?}\",\npretty(before), left.uplc, pretty(after), right.uplc, right.result,\nright.logs))"
---
--- unoptimized Core
let encoded#10 : Data = 0 in
let x#9 : list Data = unListData encoded#10 in
trace "must not run" in listData x#9
--- unoptimized UPLC
(program 1.1.0
  [(lam encoded_10
    [(lam x_9
      (force
        [[(force (builtin trace)) (con string "must not run")]
          (delay [(builtin listData) x_9])]))
      [(builtin unListData) encoded_10]])
    (con integer 0)])
--- optimized Core
let x#2 : list Data = unListData 0 in
trace "must not run" in listData x#2
--- optimized UPLC
(program 1.1.0
  [(lam builtin_2
    [(lam x_1
      (force
        [[builtin_2 (con string "must not run")] (delay [(builtin listData) x_1])]))
      [(builtin unListData) (con integer 0)]])
    (force (builtin trace))])
--- isolated pass
--- core before
let encoded#10 : Data = 0 in
let x#9 : list Data = unListData encoded#10 in
trace "must not run" in listData x#9
--- uplc before
(program 1.1.0
  [(lam encoded_10
    [(lam x_9
      (force
        [[(force (builtin trace)) (con string "must not run")]
          (delay [(builtin listData) x_9])]))
      [(builtin unListData) encoded_10]])
    (con integer 0)])
--- core after
let encoded#10 : Data = 0 in
let x#9 : list Data = unListData encoded#10 in
trace "must not run" in listData x#9
--- uplc after
(program 1.1.0
  [(lam encoded_10
    [(lam x_9
      (force
        [[(force (builtin trace)) (con string "must not run")]
          (delay [(builtin listData) x_9])]))
      [(builtin unListData) encoded_10]])
    (con integer 0)])
--- result
error: Runtime(NotData(Integer(0)))
--- logs
[]
