crates/nash-codegen/src/optimizer_tests/snapshots/nash_codegen__optimizer_tests__inverse__representation_list_unknown_invalid.snap
---
source: crates/nash-codegen/src/optimizer_tests/inverse.rs
expression: "crate::harness::pass_snapshot(b.arena, before,\nformat!(\"--- core before\\n{}\\n--- uplc before\\n{}\\n--- core after\\n{}\\n--- uplc after\\n{}\\n--- result\\n{}\\n--- logs\\n{:?}\",\npretty(before), left.uplc, pretty(after), right.uplc, right.result,\nright.logs))"
---
--- unoptimized Core
(\unknown#12 : list Data -> unListData (listData unknown#12)) false
--- unoptimized UPLC
(program 1.1.0
  [(lam unknown_12 [(builtin unListData) [(builtin listData) unknown_12]])
    (con bool False)])
--- optimized Core
let anf#2 : Data = listData false in
unListData anf#2
--- optimized UPLC
(program 1.1.0
  [(lam anf_1 [(builtin unListData) anf_1]) [(builtin listData) (con bool False)]])
--- isolated pass
--- core before
(\unknown#12 : list Data -> unListData (listData unknown#12)) false
--- uplc before
(program 1.1.0
  [(lam unknown_12 [(builtin unListData) [(builtin listData) unknown_12]])
    (con bool False)])
--- core after
(\unknown#12 : list Data -> unListData (listData unknown#12)) false
--- uplc after
(program 1.1.0
  [(lam unknown_12 [(builtin unListData) [(builtin listData) unknown_12]])
    (con bool False)])
--- result
error: Runtime(ExpectedList(Boolean(false)))
--- logs
[]
